--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,9 +10,25 @@
 </head>
 <body style="background-color:powderblue;">
 
+
 <div class="row">
     <div class="col-md-12">
         <h1 class="text-center">Movie Overview</h1>
+        <br>
+        <div class="row">
+            <div class="col-md-10">
+            </div>
+            <div class="col-md-2" align="center">
+                Film Toevoegen:
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-10">
+            </div>
+            <div class="col-md-2" align="center">
+                <input id="movieAdd" type="text">
+            </div>
+        </div>
         <br>
         <table id="table_id" class="display" style="width: 80%">
             <thead>
@@ -22,14 +38,6 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>Row 1 Data 1</td>
-                <td>Row 1 Data 2</td>
-            </tr>
-            <tr>
-                <td>Row 2 Data 1</td>
-                <td>Row 2 Data 2</td>
-            </tr>
             </tbody>
         </table>
     </div>
