--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -16,25 +16,35 @@
         <h1 class="text-center">Movie Overview</h1>
         <br>
         <div class="row">
-            <div class="col-md-10">
+            <div class="col-md-9">
             </div>
-            <div class="col-md-2" align="center">
+            <div class="col-md-3" align="left">
                 Film Toevoegen:
             </div>
         </div>
         <div class="row">
-            <div class="col-md-10">
+            <div class="col-md-9">
             </div>
-            <div class="col-md-2" align="center">
+            <div class="col-md-2" align="right">
                 <input id="movieAdd" type="text">
             </div>
+            <div class="col-md-1" align="left">
+                <button id="submit">Submit</button>
+            </div>
         </div>
-        <br>
+        <div class="row">
+        <div class="col-md-12" align="center">
+            <div id="moviesuccesful"></div>
+        </div>
+    <br>
+    </div>
         <table id="table_id" class="display" style="width: 80%">
             <thead>
             <tr>
                 <th>Film Naam</th>
                 <th>Gezien?</th>
+                <th></th>
+                <th></th>
             </tr>
             </thead>
             <tbody>
@@ -44,7 +54,7 @@
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="/js/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.16/r-2.2.0/datatables.min.js"></script>
