broken functions gerevert, comments added

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -38,7 +38,7 @@
         <table id="table_id" class="display" style="width: 80%">
             <thead>
             <tr>
-                <th>Film Naam</th>
+                <th>Film of Serie naam</th>
                 <th>Gezien?</th>
                 <th></th>
                 <th></th>
